--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -12,6 +12,11 @@
         <li class="nav-item">
           <a class="nav-link" href="profile">Profile</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="aboutUs">About Us</a>
+        </li>
+
         <div *ngIf="mentor">
         <li class="nav-item">
           <a class="nav-link" href="add-video">Add-Video</a>
